--- a/data/ui/MenulibreWindow.ui
+++ b/data/ui/MenulibreWindow.ui
@@ -612,8 +612,8 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                        <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="w" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_mnu_close_activate" swapped="no"/>
                       </object>
                     </child>
@@ -1999,11 +1999,11 @@
                   <object class="GtkBox" id="appsettings_quicklists">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="orientation">vertical</property>
                     <child>
                       <object class="GtkScrolledWindow" id="scrolledwindow1">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="shadow_type">in</property>
                         <child>
                           <object class="GtkTreeView" id="quicklists_treeview">
                             <property name="visible">True</property>
@@ -2019,70 +2019,72 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkBox" id="box14">
+                      <object class="GtkToolbar" id="quicklist_toolbar">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="border_width">6</property>
-                        <property name="orientation">vertical</property>
-                        <property name="spacing">6</property>
+                        <property name="toolbar_style">icons</property>
+                        <property name="icon_size">2</property>
+                        <style>
+                          <class name="inline-toolbar"/>
+                        </style>
                         <child>
-                          <object class="GtkButton" id="quicklist_add">
-                            <property name="label">gtk-add</property>
+                          <object class="GtkToolButton" id="quicklist_add">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="use_stock">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Add Quicklist</property>
+                            <property name="label" translatable="yes">Add Quicklist</property>
+                            <property name="use_underline">True</property>
+                            <property name="icon_name">list-add-symbolic</property>
                             <signal name="clicked" handler="on_quicklist_add_clicked" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">0</property>
+                            <property name="homogeneous">True</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="quicklist_remove">
-                            <property name="label">gtk-remove</property>
+                          <object class="GtkToolButton" id="quicklist_remove">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="use_stock">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Remove Quicklist</property>
+                            <property name="label" translatable="yes">Remove Quicklist</property>
+                            <property name="use_underline">True</property>
+                            <property name="icon_name">list-remove-symbolic</property>
                             <signal name="clicked" handler="on_quicklist_remove_clicked" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">1</property>
+                            <property name="homogeneous">True</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="quicklist_move_up">
-                            <property name="label">gtk-go-up</property>
+                          <object class="GtkToolButton" id="quicklist_move_up">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="use_stock">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Move Up</property>
+                            <property name="label" translatable="yes">Move Up</property>
+                            <property name="use_underline">True</property>
+                            <property name="icon_name">go-up-symbolic</property>
                             <signal name="clicked" handler="on_quicklist_move_up_clicked" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">2</property>
+                            <property name="homogeneous">True</property>
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="quicklist_move_down">
-                            <property name="label">gtk-go-down</property>
+                          <object class="GtkToolButton" id="quicklist_move_down">
                             <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="receives_default">True</property>
-                            <property name="use_stock">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Move Down</property>
+                            <property name="label" translatable="yes">Move Down</property>
+                            <property name="use_underline">True</property>
+                            <property name="icon_name">go-down-symbolic</property>
                             <signal name="clicked" handler="on_quicklist_move_down_clicked" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">3</property>
+                            <property name="homogeneous">True</property>
                           </packing>
                         </child>
                       </object>
@@ -2112,7 +2114,6 @@
                   <object class="GtkScrolledWindow" id="appsettings_editor">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTextView" id="editor_textview">
                         <property name="visible">True</property>
